# rspfdisk

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.example  MANIFEST.json  README-zh-TW.md  README.md  TEAM.md  deny.toml  final.md  findings.md  lessons.md  plan.md  progress.md  spec.md  task_plan.md  test.md  todos.md
.codex/evolution/state/: CODEX_STATE.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  linux-acceptance.yml  release.yml
.opencode/: memory.db  vectors.usearch
agents/: boot-media-agent.md  disk-core-agent.md  docs-agent.md  mbr-gpt-agent.md  orchestrator.md  quick-layout-agent.md  release-agent.md  reviewer-agent.md  safety-agent.md  system-architect.md  tester-agent.md  tui-agent.md
boot/: quick-help.txt  rspfdisk-media
boot/grub/: grub.cfg
boot/initramfs/: init
checklists/: release-checklist.md  safety-checklist.md
crates/rspfdisk-backup/: Cargo.toml
crates/rspfdisk-backup/src/: error.rs  format.rs  lib.rs  restore.rs  writer.rs
crates/rspfdisk-cli/: Cargo.toml
crates/rspfdisk-cli/src/: commands.rs  main.rs
crates/rspfdisk-cli/tests/: boot_media_tests.rs  golden_layout_tests.rs  integration_tests.rs  uefi_poc_tests.rs
crates/rspfdisk-cli/tests/support/: mod.rs
crates/rspfdisk-core/: Cargo.toml
crates/rspfdisk-core/src/: error.rs  layout.rs  lib.rs  partition.rs  sector.rs
crates/rspfdisk-disk/: Cargo.toml
crates/rspfdisk-disk/src/: device.rs  device_handle.rs  error.rs  file_device.rs  lib.rs  linux_device.rs  linux_permissions.rs  linux_scan.rs  linux_sysfs.rs  open.rs  path_kind.rs  readonly.rs  scan.rs  sector_buf.rs  test_helpers.rs
crates/rspfdisk-disk/tests/: disk_tests.rs  path_kind_tests.rs
crates/rspfdisk-gpt/: Cargo.toml
crates/rspfdisk-gpt/src/: crc.rs  error.rs  guid.rs  header.rs  lib.rs  parser.rs  types.rs  validator.rs  writer.rs
crates/rspfdisk-gpt/tests/: gpt_negative_tests.rs  gpt_proptest.rs  gpt_tests.rs
crates/rspfdisk-i18n/: Cargo.toml
crates/rspfdisk-i18n/locales/: en.json  zh-TW.json
crates/rspfdisk-i18n/src/: lib.rs
crates/rspfdisk-layouts/: Cargo.toml
crates/rspfdisk-layouts/src/: diff.rs  engine.rs  error.rs  lib.rs  size.rs  template.rs
crates/rspfdisk-layouts/tests/: layout_tests.rs  layouts_proptest.rs
crates/rspfdisk-mbr/: Cargo.toml
crates/rspfdisk-mbr/src/: entry.rs  error.rs  lib.rs  parser.rs  types.rs  validator.rs  writer.rs
crates/rspfdisk-mbr/tests/: mbr_proptest.rs  mbr_tests.rs
crates/rspfdisk-safety/: Cargo.toml
crates/rspfdisk-safety/src/: confirmation.rs  danger.rs  error.rs  lib.rs  token.rs
crates/rspfdisk-safety/tests/: danger_tests.rs  safety_tests.rs
crates/rspfdisk-tui/: Cargo.toml
crates/rspfdisk-tui/src/: lib.rs  main.rs
crates/rspfdisk-uefi/: Cargo.toml
crates/rspfdisk-uefi/src/: gpt.rs  lib.rs  main.rs  types.rs  uefi_entry.rs
crates/rspfdisk-uefi/tests/: gpt_nostd_tests.rs
docs/: architecture.md  boot-media.md  bootable-guided-install.md  data-formats.md  linux-layout.md  macos-layout.md  quick-layouts.md  risk-register.md  safety.md  sources.md  ui-tui.md  windows-layout.md
examples/: layout-preview-linux.txt  layout-preview-macos.txt  layout-preview-windows.txt
mcps/codebase-memory-mcp/tools/: delete_project.json  detect_changes.json  get_architecture.json  get_code_snippet.json  get_graph_schema.json  index_repository.json  index_status.json  ingest_traces.json  list_projects.json  manage_adr.json  query_graph.json  rlm_chunk.json  rlm_filter.json  rlm_peek.json  rlm_read_symbol.json  rlm_scan.json  rlm_session_delete.json  rlm_session_list.json  rlm_workflow.json  search_code.json  search_graph.json  trace_path.json
prompts/: for_codex_desktop.md  for_opencode.md
templates/: linux_bios_gpt_biosboot.toml  linux_btrfs_standard.toml  linux_ext4_home.toml  linux_ext4_standard.toml  macos_apfs_reserve_windows.toml  macos_apfs_shared_exfat.toml  macos_apfs_target.toml  multiboot_windows_linux.toml  windows_legacy_mbr.toml  windows_uefi_dual_boot.toml  windows_uefi_standard.toml  windows_uefi_with_data.toml
terminals/: .next-id  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/images/: golden-windows-standard.img.rspbak  integration-write.img.rspbak  test-empty.img.rspbak
tools/: build-uefi.ps1  build-uefi.sh  make-boot-iso.ps1  make-boot-iso.sh  make-boot-usb.ps1  make-boot-usb.sh  make-initramfs.sh  make-release.ps1  make-release.sh  qemu-test.ps1  qemu-test.sh  qemu-uefi-app.sh  qemu-uefi-smoke.sh  verify-linux.sh
tools/lib/: boot-common.sh
workflows/: controlled-workflow.md
