[package]
name = "rspfdisk-backup"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rspfdisk-core = { path = "../rspfdisk-core" }
rspfdisk-disk = { path = "../rspfdisk-disk" }
rspfdisk-gpt = { path = "../rspfdisk-gpt" }
rspfdisk-mbr = { path = "../rspfdisk-mbr" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }