[package]
name = "rspfdisk-disk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rspfdisk-core = { path = "../rspfdisk-core" }
thiserror = { workspace = true }
hex = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }